examples/test/testpolicy1039.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1039
  namespace: namespace437
spec:
  podSelector:
    matchLabels:
      key11: value43
      key17: value27
      key35: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value20
      podSelector:
        matchLabels:
          key24: value21
          key39: value7
          key3: value5
